<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/main_container"
        >

        <LinearLayout
            android:elevation="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:padding="8dp"
            android:background="@color/cardview_light_background"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/commonSubTitelStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0.8"
                android:text="Apply For SBI Credit Card"
                android:textAlignment="textStart"
                android:textSize="32dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:background="@color/white"
                    android:src="@drawable/sbi" />
            </LinearLayout>
        </LinearLayout>
                 <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="15dp"
                    >
                    <TextView
                        android:layout_marginStart="10dp"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="Name"
                        android:singleLine="true"
                        android:id="@+id/username"
                        android:maxLength="75"
                        android:inputType="textCapWords"
                        android:text=""
                        android:maxLines="1"
                        android:digits="@string/NameDigits"
                        style="@style/commonSubTitelStyle"
                        android:textColor="@color/defaultTextColor"

                        />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    >
                    <TextView
                        android:layout_marginStart="10dp"
                        android:padding="4dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:hint="Mobile Number"
                        android:singleLine="true"
                        android:id="@+id/mobNo"
                        android:maxLength="10"
                        android:inputType="phone"
                        android:text=""
                        android:digits="@string/PanNumberDigits"
                        android:maxLines="1"
                        style="@style/commonSubTitelStyle"
                        android:textColor="@color/defaultTextColor"
                        />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <Spinner
                        android:autofillHints="@string/age_range"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spAge"
                        style="@style/spinnerTextStyle"
                        android:dropDownSelector="@android:drawable/arrow_down_float"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/ageError"
                    android:visibility="gone"
                    android:layout_marginHorizontal="26dp"
                    android:textColor="@color/errorTextColor"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp"
                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/profession"
                        style="@style/spinnerTextStyle"
                        android:dropDownSelector="@android:drawable/arrow_down_float"
                        />
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/professionError"
                    android:visibility="gone"
                    android:layout_marginHorizontal="26dp"
                    android:textColor="@color/errorTextColor"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="7dp"
                    android:layout_margin="10dp"
                    app:cardCornerRadius="10dp">
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/income"
                        style="@style/spinnerTextStyle"
                        android:dropDownSelector="@android:drawable/arrow_down_float"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:id="@+id/incomeError"
                    android:visibility="gone"
                    android:layout_marginHorizontal="26dp"
                    android:textColor="@color/errorTextColor"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        app:cardElevation="7dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="15dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="Pincode"
                            android:singleLine="true"
                            android:id="@+id/pin"
                            android:maxLength="6"
                            android:text=""
                            android:digits="@string/NumberDigits"
                            android:inputType="number"
                            style="@style/commonEdittextStyle"
                            />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        app:cardElevation="7dp"
                        android:layout_margin="10dp"
                        app:cardCornerRadius="15dp"
                        >
                        <EditText
                            android:inputType="text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="City"
                            android:singleLine="true"
                            android:id="@+id/city"
                            style="@style/commonEdittextStyle"
                            />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

        <LinearLayout
            android:layout_margin="10dp"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <CheckBox
                    android:layout_weight="0.2"
                    android:inputType="text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:singleLine="false"
                    android:id="@+id/consent"
                    />
            <TextView
                android:padding="4dp"
                android:layout_weight="1.8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/consent"
                android:textColor="@color/defaultTextColor"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/consentError"
            android:visibility="gone"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="26dp"
            android:textColor="@color/errorTextColor"
            />

        <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/applyForCard"
                    android:text="Apply"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/cornerbutton"
                    android:backgroundTint="@color/appbar"
                    android:textColor="@color/white"
                    />

    </LinearLayout>
</ScrollView>