<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.uav.autodebit.Activity.PanVerification">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/appbar"
        app:contentInsetEnd="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetRight="0dp"
        app:contentInsetStart="0dp">

        <ImageView
            android:id="@+id/back_activity_button1"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:scaleType="center"
            android:src="@drawable/rof_backbutton"
            android:textStyle="bold"
            android:tint="@color/white"


            />

        <LinearLayout
            android:id="@+id/saveshipmenticonintop"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/appbar"
            android:orientation="vertical"
            android:padding="@dimen/pin_content_layout_padding">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:paddingBottom="0dp"
                android:tint="@color/white" />

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/poppinsbold"
            android:gravity="center"
            android:text="Add Bank Account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"

            />
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textbox"
                style="@style/commonSubTitelStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:text="Please enter your Bank Account  details to link with the app"
                android:textAlignment="center"

                />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <EditText
                    android:id="@+id/acno"
                    style="@style/commonEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:digits="@string/AccountNumerDigits"
                    android:drawableLeft="@drawable/accountno"
                    android:hint="Account Number"
                    android:inputType="number"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:singleLine="true" />

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <EditText
                    android:id="@+id/bankname"
                    style="@style/commonEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:digits="@string/AccountNumerDigits"
                    android:drawableLeft="@drawable/ifsc"
                    android:hint="Bank"
                    android:inputType="number"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:singleLine="true" />


                <!--     <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/ifscid"
                        android:visibility="gone"/>



                   <AutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ifsc"
                        android:backgroundTint="@color/white"
                        android:hint="Bank Name"
                        android:singleLine="true"
                        android:id="@+id/ifsc"
                        android:inputType="textCapCharacters"
                        style="@style/commonEdittextStyle"
                        />-->
                <!--  <Spinner
                      android:id="@+id/select_drop"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:spinnerMode="dialog"

                      />-->
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <Spinner
                    android:id="@+id/account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dialog"

                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <EditText
                    android:id="@+id/acholdername"
                    style="@style/commonEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:digits="@string/NameDigits"
                    android:drawableLeft="@drawable/usericon"
                    android:hint="Account Holder Name"
                    android:inputType="textCapWords"
                    android:maxLength="32"
                    android:maxLines="1"
                    android:singleLine="true"

                    />
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <com.uav.autodebit.override.UAVEditText
                    android:id="@+id/maxamount"
                    style="@style/commonEdittextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:digits="@string/NumberDigits"
                    android:drawableLeft="@drawable/amount"
                    android:hint="Min Amount"
                    android:inputType="number|textVisiblePassword"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:text=""

                    />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/condition_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I agree to the "
                    android:textColor="@color/defaultTextColor" />

                <TextView
                    android:id="@+id/condition_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_condition_msg"
                    android:textColor="@color/appbar"></TextView>
            </LinearLayout>


            <Button
                android:id="@+id/mandatebtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/cornerbutton"
                android:text="verify"
                android:textColor="@color/white"


                />

        </LinearLayout>

    </ScrollView>


</LinearLayout>